Refactor Day2A and Day2B: streamline interval handling and introduce helper functions
- Update interval processing to use a structured Interval type
- Simplify logic for checking repeating numbers and patterns
- Enhance readability by renaming variables and functions for clarity

--- a/years/2025/day2/BUILD.bazel
+++ b/years/2025/day2/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     ],
     importpath = "github.com/lonnblad/advent-of-code/years/2025/day2",
     visibility = ["//visibility:public"],
+    deps = ["//util/interval"],
 )
 
 go_test(
