--- a/years/2025/day3/BUILD.bazel
+++ b/years/2025/day3/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     ],
     importpath = "github.com/lonnblad/advent-of-code/years/2025/day3",
     visibility = ["//visibility:public"],
+    deps = ["//util/strconv"],
 )
 
 go_test(
