--- a/years/2025/day5/BUILD.bazel
+++ b/years/2025/day5/BUILD.bazel
@@ -8,7 +8,10 @@ go_library(
     ],
     importpath = "github.com/lonnblad/advent-of-code/years/2025/day5",
     visibility = ["//visibility:public"],
-    deps = ["//util/interval"],
+    deps = [
+        "//util/interval",
+        "//util/strconv",
+    ],
 )
 
 go_test(
